@@ -1,5 +1,7 @@
 package io.airlift.http.server;
 
+import com.google.common.hash.HashCode;
+import com.google.common.io.Files;
 import io.airlift.http.server.HttpServer.ClientCertificate;
 import io.airlift.log.Logger;
 import io.airlift.security.pem.PemReader;
@@ -11,10 +13,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.security.GeneralSecurityException;
 import java.security.KeyStore;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ScheduledExecutorService;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.hash.Hashing.sha256;
 import static java.lang.Math.toIntExact;
 import static java.util.Objects.requireNonNull;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
@@ -29,11 +33,11 @@ final class ReloadableSslContextFactoryProvider
 
     private final SslContextFactory.Server sslContextFactory;
 
-    private final String keystorePath;
+    private final Optional<FileWatch> keystoreFile;
     private final String keystorePassword;
     private final String keyManagerPassword;
 
-    private final String trustStorePath;
+    private final Optional<FileWatch> trustStoreFile;
     private final String trustStorePassword;
 
     public ReloadableSslContextFactoryProvider(HttpServerConfig config, ScheduledExecutorService scheduledExecutor, ClientCertificate clientCertificate)
@@ -41,11 +45,11 @@ final class ReloadableSslContextFactoryProvider
         requireNonNull(config, "config is null");
         requireNonNull(scheduledExecutor, "scheduledExecutor is null");
 
-        keystorePath = config.getKeystorePath();
+        keystoreFile = Optional.ofNullable(config.getKeystorePath()).map(File::new).map(FileWatch::new);
         keystorePassword = config.getKeystorePassword();
         keyManagerPassword = config.getKeyManagerPassword();
 
-        trustStorePath = config.getTrustStorePath();
+        trustStoreFile = Optional.ofNullable(config.getTrustStorePath()).map(File::new).map(FileWatch::new);
         trustStorePassword = config.getTrustStorePassword();
 
         sslContextFactory = new SslContextFactory.Server();
@@ -75,12 +79,12 @@ final class ReloadableSslContextFactoryProvider
 
     private void loadContextFactory(SslContextFactory.Server sslContextFactory)
     {
-        KeyStore keyStore = loadKeyStore(keystorePath, keystorePassword, keyManagerPassword);
+        KeyStore keyStore = loadKeyStore(keystoreFile.map(FileWatch::getFile), keystorePassword, keyManagerPassword);
         sslContextFactory.setKeyStore(keyStore);
         sslContextFactory.setKeyStorePassword(firstNonNullOrEmpty(keyManagerPassword, keystorePassword));
 
-        if (trustStorePath != null) {
-            sslContextFactory.setTrustStore(loadTrustStore(trustStorePath, trustStorePassword));
+        if (trustStoreFile.isPresent()) {
+            sslContextFactory.setTrustStore(loadTrustStore(trustStoreFile.get().getFile(), trustStorePassword));
             sslContextFactory.setTrustStorePassword("");
         }
         else {
@@ -90,9 +94,9 @@ final class ReloadableSslContextFactoryProvider
         }
     }
 
-    private static KeyStore loadKeyStore(String keystorePath, String keystorePassword, String keyManagerPassword)
+    private static KeyStore loadKeyStore(Optional<File> keystoreFile, String keystorePassword, String keyManagerPassword)
     {
-        if (keystorePath == null) {
+        if (!keystoreFile.isPresent()) {
             try {
                 KeyStore keyStore = KeyStore.getInstance("JKS");
                 keyStore.load(null, new char[0]);
@@ -103,46 +107,45 @@ final class ReloadableSslContextFactoryProvider
             }
         }
 
+        File file = keystoreFile.get();
         try {
-            File keyStoreFile = new File(keystorePath);
-            if (PemReader.isPem(keyStoreFile)) {
+            if (PemReader.isPem(file)) {
                 checkArgument(keyManagerPassword == null, "key manager password is not allowed with a PEM keystore");
-                return PemReader.loadKeyStore(keyStoreFile, keyStoreFile, Optional.ofNullable(keystorePassword), true);
+                return PemReader.loadKeyStore(file, file, Optional.ofNullable(keystorePassword), true);
             }
         }
         catch (IOException | GeneralSecurityException e) {
-            throw new IllegalArgumentException("Error loading PEM key store: " + keystorePath, e);
+            throw new IllegalArgumentException("Error loading PEM key store: " + file, e);
         }
 
-        try (InputStream in = new FileInputStream(keystorePath)) {
+        try (InputStream in = new FileInputStream(file)) {
             KeyStore keyStore = KeyStore.getInstance("JKS");
             keyStore.load(in, keystorePassword.toCharArray());
             return keyStore;
         }
         catch (IOException | GeneralSecurityException e) {
-            throw new IllegalArgumentException("Error loading Java key store: " + keystorePath, e);
+            throw new IllegalArgumentException("Error loading Java key store: " + file, e);
         }
     }
 
-    private static KeyStore loadTrustStore(String truststorePath, String truststorePassword)
+    private static KeyStore loadTrustStore(File truststoreFile, String truststorePassword)
     {
         try {
-            File keyStoreFile = new File(truststorePath);
-            if (PemReader.isPem(keyStoreFile)) {
-                return PemReader.loadTrustStore(keyStoreFile);
+            if (PemReader.isPem(truststoreFile)) {
+                return PemReader.loadTrustStore(truststoreFile);
             }
         }
         catch (IOException | GeneralSecurityException e) {
-            throw new IllegalArgumentException("Error loading PEM trust store: " + truststorePath, e);
+            throw new IllegalArgumentException("Error loading PEM trust store: " + truststoreFile, e);
         }
 
-        try (InputStream in = new FileInputStream(truststorePath)) {
+        try (InputStream in = new FileInputStream(truststoreFile)) {
             KeyStore keyStore = KeyStore.getInstance("JKS");
             keyStore.load(in, truststorePassword == null ? null : truststorePassword.toCharArray());
             return keyStore;
         }
         catch (IOException | GeneralSecurityException e) {
-            throw new IllegalArgumentException("Error loading Java trust store: " + truststorePath, e);
+            throw new IllegalArgumentException("Error loading Java trust store: " + truststoreFile, e);
         }
     }
 
@@ -157,7 +160,9 @@ final class ReloadableSslContextFactoryProvider
     private synchronized void reload()
     {
         try {
-            sslContextFactory.reload(sslContextFactory -> loadContextFactory((SslContextFactory.Server) sslContextFactory));
+            if (keystoreFile.map(FileWatch::updateState).orElse(false) || trustStoreFile.map(FileWatch::updateState).orElse(false)) {
+                sslContextFactory.reload(sslContextFactory -> loadContextFactory((SslContextFactory.Server) sslContextFactory));
+            }
         }
         catch (Exception e) {
             log.warn(e, "Unable to reload SslContext.");
@@ -173,5 +178,57 @@ final class ReloadableSslContextFactoryProvider
             return second;
         }
         return "";
+    }
+
+    private static class FileWatch
+    {
+        private final File file;
+        private long lastModified = -1;
+        private long length = -1;
+        private HashCode hashCode = sha256().hashBytes(new byte[0]);
+
+        public FileWatch(File file)
+        {
+            this.file = requireNonNull(file, "file is null");
+        }
+
+        public File getFile()
+        {
+            return file;
+        }
+
+        public boolean updateState()
+        {
+            try {
+                // only check contents if length or modified time changed
+                long newLastModified = file.lastModified();
+                long newLength = file.length();
+                if (lastModified == newLastModified && length == newLength) {
+                    return false;
+                }
+
+                // update stats
+                lastModified = newLastModified;
+                length = newLength;
+
+                // check if contents changed
+                HashCode newHashCode = Files.asByteSource(file).hash(sha256());
+                if (Objects.equals(hashCode, newHashCode)) {
+                    return false;
+                }
+                hashCode = newHashCode;
+                return true;
+            }
+            catch (IOException e) {
+                // assume the file changed
+                return true;
+            }
+        }
+
+        @Override
+        public String toString()
+        {
+            return file.toString();
+        }
     }
 }
